# psgp

./: ChangeLog  DESCRIPTION  MD5  NAMESPACE  configure.ac
R/: learnParameters.R  learnParameters.r  makePrediction.r  psgp.R  spatialPredict.R
inst/doc/: InstallationInstructions.R
man/: buildMetadata.Rd  learnParameters.rd  makePrediction.rd  psgp-package.Rd  spatialPredict.Rd  summary.Rd
src/: CovarianceFunction.cpp  GaussianProcess.cpp  GaussianProcess.h  Makefile  Makevars  Makevars.in  Makevars.win  Matern5CF.cpp  ModelTrainer.cpp  PSGP.cpp  RInterface.cpp  SequentialGP.cpp  SequentialGP.h  SumCovarianceFunction.cpp  WhiteNoiseCF.cpp  astonGeostats.cpp  astonGeostats.h  psgp_common.cpp  psgp_common.h  psgp_data.cpp  psgp_data.h  psgp_estimator.cpp  psgp_estimator.h  psgp_settings.h  sensor_metadata_parser.cpp  sensor_metadata_parser.h  setup.sh
src/covarianceFunctions/: ConstantCF.cpp  ConstantCF.h  CovarianceFunction.cpp  CovarianceFunction.h  Exponential2CF.cpp  Exponential2CF.h  ExponentialCF.cpp  ExponentialCF.h  GaussianCF.cpp  GaussianCF.h  GenericCF.cpp  GenericCF.h  IdentityTransform.cpp  IdentityTransform.h  LinearCF.cpp  LinearCF.h  LogTransform.cpp  LogTransform.h  Matern3CF.cpp  Matern3CF.h  Matern5CF.cpp  Matern5CF.h  MaternCF.cpp  MaternCF.h  NegLogSigmoidTransform.cpp  NegLogSigmoidTransform.h  NeuralNetCF.cpp  NeuralNetCF.h  SigmoidTransform.cpp  SigmoidTransform.h  SumCovarianceFunction.cpp  SumCovarianceFunction.h  Transform.cpp  Transform.h  WhiteNoiseCF.cpp  WhiteNoiseCF.h  covarianceFunctions.h  testCF.cpp
src/gaussianProcesses/: ForwardModel.cpp  ForwardModel.h  GaussianProcess.cpp  GaussianProcess.h  PSGP.cpp  PSGP.h  SeparableGP.cpp  SeparableGP.h  SequentialGP.cpp  SequentialGP.cpp.mine  SequentialGP.h
src/io/: csvstream.cpp  csvstream.h
src/itppext/: itppext.cpp  itppext.h
src/likelihoodModels/: AnalyticLikelihood.h  ExponentialSampLikelihood.cpp  ExponentialSampLikelihood.h  ExponentialSampLikelihoodIdentity.cpp  ExponentialSampLikelihoodIdentity.h  GaussianLikelihood.cpp  GaussianLikelihood.h  GaussianSampLikelihood.cpp  GaussianSampLikelihood.h  GaussianSampLikelihoodMathML.cpp  GaussianSampLikelihoodMathML.h  LikelihoodType.cpp  LikelihoodType.h  SamplingLikelihood.cpp  SamplingLikelihood.h  SamplingLikelihoodMathML.cpp  SamplingLikelihoodMathML.h
src/likelihoodModels/MathMLParser/: ExpressionNode.cpp  ExpressionNode.h  MathMLParser.cpp  MathMLParser.h
src/optimisation/: CGModelTrainer.cpp  CGModelTrainer.h  GDModelTrainer.cpp  GDModelTrainer.h  ModelTrainer.cpp  ModelTrainer.h  Optimisable.cpp  Optimisable.h  QuasiNewtonModelTrainer.cpp  QuasiNewtonModelTrainer.h  SCGModelTrainer.cpp  SCGModelTrainer.h  SimAnnealModelTrainer.cpp  SimAnnealModelTrainer.h
tests/: error_handling.R  meuse_psgp.R  meuse_psgp.Rout.save  psgp.R  psgp.Rout.save
